--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angularx-social-login": "^2.2.1",
     "chart.js": "^2.9.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
